--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "OGL-UK-3.0",
   "dependencies": {
     "@aws-sdk/client-sqs": "3.910.0",
+    "@defra/cdp-auditing": "0.5.0",
     "@defra/hapi-tracing": "1.22.0",
     "@elastic/ecs-pino-format": "1.5.0",
     "@hapi/boom": "10.0.1",
